--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sha2 = "0.10.8"
+rand = "0.8.5"
+secp256k1 = { version = "0.30.0", features = ["rand", "hashes"] }
